--- a/.classpath
+++ b/.classpath
@@ -33,5 +33,10 @@
 			<attribute name="gradle_used_by_scope" value="main,test"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Zach/.gradle/caches/modules-2/files-2.1/org.springframework/spring-beans/5.2.9.RELEASE/80e722ffa73a43459f639d36e25aa4e4a08d8d79/spring-beans-5.2.9.RELEASE.jar" sourcepath="C:/Users/Zach/.gradle/caches/modules-2/files-2.1/org.springframework/spring-beans/5.2.9.RELEASE/efcc6babb0cbd975ce2b2083cce0790dd31f689a/spring-beans-5.2.9.RELEASE-sources.jar">
+		<attributes>
+			<attribute name="gradle_used_by_scope" value="main,test"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
