--- a/.classpath
+++ b/.classpath
@@ -1,42 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="src" path="bmt-backend/src/main/java"/>
-	<classpathentry kind="lib" path="bmt-backend/gradle/wrapper/gradle-wrapper.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Zach/.gradle/caches/modules-2/files-2.1/jakarta.persistence/jakarta.persistence-api/2.2.3/8f6ea5daedc614f07a3654a455660145286f024e/jakarta.persistence-api-2.2.3.jar" sourcepath="C:/Users/Zach/.gradle/caches/modules-2/files-2.1/jakarta.persistence/jakarta.persistence-api/2.2.3/f9671636b64baca8130e3fcf516894d40173b47f/jakarta.persistence-api-2.2.3-sources.jar">
+	<classpathentry kind="src" output="bin/main" path="src/main/java">
 		<attributes>
+			<attribute name="gradle_scope" value="main"/>
 			<attribute name="gradle_used_by_scope" value="main,test"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Zach/.gradle/caches/modules-2/files-2.1/org.springframework/spring-web/5.2.9.RELEASE/4bc4a60b74ea0a92ed09d41c675f8426324b4e56/spring-web-5.2.9.RELEASE.jar" sourcepath="C:/Users/Zach/.gradle/caches/modules-2/files-2.1/org.springframework/spring-web/5.2.9.RELEASE/90886dd59f07146e3bac519c2d8593c947eaa8f8/spring-web-5.2.9.RELEASE-sources.jar">
+	<classpathentry kind="src" output="bin/test" path="src/test/java">
 		<attributes>
-			<attribute name="gradle_used_by_scope" value="main,test"/>
+			<attribute name="gradle_scope" value="test"/>
+			<attribute name="gradle_used_by_scope" value="test"/>
+			<attribute name="test" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Zach/.gradle/caches/modules-2/files-2.1/org.springframework.boot/spring-boot-autoconfigure/2.3.4.RELEASE/ff9efafb9d62c17d8c3c1faec7afad147c924263/spring-boot-autoconfigure-2.3.4.RELEASE.jar" sourcepath="C:/Users/Zach/.gradle/caches/modules-2/files-2.1/org.springframework.boot/spring-boot-autoconfigure/2.3.4.RELEASE/ab1099fd038676548eb763db1d1176d1b92828d1/spring-boot-autoconfigure-2.3.4.RELEASE-sources.jar">
-		<attributes>
-			<attribute name="gradle_used_by_scope" value="main,test"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Zach/.gradle/caches/modules-2/files-2.1/org.springframework.boot/spring-boot/2.3.4.RELEASE/f23f14ae4062d5983db89b7c7336166b6734fc57/spring-boot-2.3.4.RELEASE.jar" sourcepath="C:/Users/Zach/.gradle/caches/modules-2/files-2.1/org.springframework.boot/spring-boot/2.3.4.RELEASE/efefbf178f7a5c48ef0aca6bb73aeebe58d39d28/spring-boot-2.3.4.RELEASE-sources.jar">
-		<attributes>
-			<attribute name="gradle_used_by_scope" value="main,test"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Zach/.gradle/caches/modules-2/files-2.1/org.springframework.data/spring-data-commons/2.3.4.RELEASE/a2051be2c44a59a430fa610ae8a8dc31ad18f0e0/spring-data-commons-2.3.4.RELEASE.jar" sourcepath="C:/Users/Zach/.gradle/caches/modules-2/files-2.1/org.springframework.data/spring-data-commons/2.3.4.RELEASE/689290fbf0a93b99f2ef231c4c04eaf6379cc703/spring-data-commons-2.3.4.RELEASE-sources.jar">
-		<attributes>
-			<attribute name="gradle_used_by_scope" value="main,test"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Zach/.gradle/caches/modules-2/files-2.1/org.springframework.data/spring-data-jpa/2.3.4.RELEASE/d564e9ce9bf4dd6183dd417625efa97e4a13f4ac/spring-data-jpa-2.3.4.RELEASE.jar" sourcepath="C:/Users/Zach/.gradle/caches/modules-2/files-2.1/org.springframework.data/spring-data-jpa/2.3.4.RELEASE/1f167abe512b735a0f977ba71fd5d3a20b9fcb53/spring-data-jpa-2.3.4.RELEASE-sources.jar">
-		<attributes>
-			<attribute name="gradle_used_by_scope" value="main,test"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Zach/.gradle/caches/modules-2/files-2.1/org.springframework/spring-beans/5.2.9.RELEASE/80e722ffa73a43459f639d36e25aa4e4a08d8d79/spring-beans-5.2.9.RELEASE.jar" sourcepath="C:/Users/Zach/.gradle/caches/modules-2/files-2.1/org.springframework/spring-beans/5.2.9.RELEASE/efcc6babb0cbd975ce2b2083cce0790dd31f689a/spring-beans-5.2.9.RELEASE-sources.jar">
-		<attributes>
-			<attribute name="gradle_used_by_scope" value="main,test"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-11/"/>
+	<classpathentry kind="con" path="org.eclipse.buildship.core.gradleclasspathcontainer"/>
+	<classpathentry kind="output" path="bin/default"/>
 </classpath>
