--- a/bmt-frontend/package.json
+++ b/bmt-frontend/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "axios": "^0.21.0",
+    "vue": "^2.5.2",
+    "vue-router": "^3.0.1",
+    "vue-template-compiler": "^2.4.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
