added spring integration to cucumber tests

--- a/bmt-backend/build.gradle
+++ b/bmt-backend/build.gradle
@@ -19,6 +19,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.cucumber:cucumber-java:6.8.1'
 	testImplementation 'io.cucumber:cucumber-junit:6.8.1'
+	testImplementation 'io.cucumber:cucumber-spring:6.8.1'
 }
 
 test {
