--- a/bmt-backend/src/main/resources/application.properties
+++ b/bmt-backend/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.password=
+spring.datasource.password=@Lblb0219
 spring.datasource.username=postgres
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
