--- a/bmt-frontend/package.json
+++ b/bmt-frontend/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "axios": "^0.21.0",
+    "moment": "^2.29.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "vue-template-compiler": "^2.4.2"
+    "vue-router": "^3.5.1",
+    "vue-template-compiler": "^2.4.2",
+    "vuejs-datetimepicker": "^1.1.13"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
