--- a/bmt-frontend/package.json
+++ b/bmt-frontend/package.json
@@ -14,7 +14,8 @@
     "vue": "^2.5.2",
     "vue-router": "^3.5.1",
     "vue-template-compiler": "^2.4.2",
-    "vuejs-datetimepicker": "^1.1.13"
+    "vuejs-datetimepicker": "^1.1.13",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
