--- a/bmt-frontend/package.json
+++ b/bmt-frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "moment": "^2.29.1",
+    "serve": "^11.3.2",
     "vue": "^2.5.2",
     "vue-router": "^3.5.1",
     "vue-template-compiler": "^2.4.2",
